# graywolf

./: .gitattributes  .gitignore  .goreleaser.yml  CLAUDE.md  Cargo.toml  Cross.toml  Dockerfile.goreleaser  Dockerfile.goreleaser.arm64  Makefile  README.md  ROADMAP.md  bench.sh  build.rs  go.mod  go.sum
.cargo/: config.toml
.context/: 2026-03-31-6e5c9a7b.md  2026-03-31-afsk-demodulator-porting-from-c-to-rust.md  2026-03-31-c-codebase-exploration-and-analysis.md  2026-03-31-c-program-analysis-and-go-porting.md  2026-03-31-cea783cc.md  2026-03-31-demodulation-test-infrastructure-analysis.md  2026-03-31-makefile-creation.md  2026-03-31-performance-analysis-of-dsp-and-audio-processing.md  2026-05-07-android-poc-b-spec.md  2026-06-17-android-move-blocking-boot-off-launch.md
.githooks/: pre-commit
.github/workflows/: android.yml  ci.yml  fuzz.yml  release.yml
android/app/: build.gradle.kts
benches/: afsk_bench.rs
cmd/graywolf/: main.go  resource_windows.syso  versioninfo.json
cmd/graywolf-pocb/: pocb_index.html
cmd/release-notes/: main.go  main_test.go
docs/changelogs/: v0.11.0.md
docs/handbook/: actions-handler-safety-powershell.html  actions-handler-safety-shell.html  actions-handler-safety-webhooks.html  actions-handler-safety.html  actions.html  agwpe.html  api.html  architecture.html  audio.html  ax25-terminal.html  beacons.html  callsign.html  channels.html  configurations.html  digipeater.html  gps.html  handbook.css  handbook.js  history-database.html  igate.html  index.html  installation.html  kiss-serial.html  kiss.html  livemap.html  logs.html  maps.html  messaging.html  monitoring.html  openapi.json  openapi.yaml  preferences.html  ptt.html  remote-actions.html  remote-kiss-tnc.html  simulation.html
docs/plans/: 2026-06-11-armhf-t64-alsa-htstamp-fix.md
docs/wiki/: README.md  actions.md  android-play-store.md  build-pipelines.md  bulletins.md  code-map.md  glossary.md  invariants.md  system-topology.md
graywolf/: go.mod  go.sum
graywolf-modem/: Cargo.toml  bench.sh  build.rs
graywolf-modem/src/: cm108.rs  demod_afsk.rs  demod_afsk_multi.rs  dsp.rs  filter_buf.rs  hdlc.rs  lib.rs  state.rs  txtest.rs  types.rs  wavio.rs
graywolf-modem/src/adsb/: crc.rs  demodulator.rs  message.rs  mod.rs  modulator.rs  tests.rs
graywolf-modem/src/android/: audio.rs  audio_tx.rs  mod.rs  upcall.rs
graywolf-modem/src/audio/: flac.rs  mod.rs  soundcard.rs  stdin_raw.rs
graywolf-modem/src/fx25/: mod.rs  rs.rs  tests.rs
graywolf-modem/src/il2p/: header.rs  mod.rs  payload.rs  rs_il2p.rs  scramble.rs  tests.rs
graywolf-modem/src/ipc/: framing.rs  proto.rs  server.rs
graywolf-modem/src/modem/: mod.rs  tx_worker.rs
graywolf-modem/src/modem_9600/: mod.rs
graywolf-modem/src/modem_psk/: mod.rs
graywolf-modem/src/sdr/: mod.rs
graywolf-modem/src/tx/: afsk_mod.rs  hdlc_encode.rs  mod.rs  ptt.rs  ptt_cm108_macos.rs  ptt_cm108_unix.rs  ptt_cm108_win.rs  ptt_gpio_linux.rs  ptt_rigctld.rs  ptt_unix.rs  ptt_win.rs
graywolf-modem/tests/: audio_level.rs  correctness.rs  decode_e2e.rs  ipc_flac_e2e.rs  twist.rs
graywolf/web/: embed.go  index.html  package-lock.json  package.json  vite.config.js
packaging/aur/: .SRCINFO  PKGBUILD  graywolf-aprs.install  graywolf-aprs.service  graywolf-aprs.sysusers  graywolf.install  graywolf.service  graywolf.sysusers
packaging/grafana/: remote-kiss-tnc.json
packaging/nsis/: RUNNING-AS-A-SERVICE.md  graywolf.nsi
packaging/scripts/: postinstall.sh  preremove.sh
packaging/systemd/: graywolf.service
packaging/udev/: 99-graywolf-cm108.rules
packaging/wix/: graywolf.wxs
pkg/actions/: classifier.go  classifier_test.go  cmd_executor.go  cmd_executor_test.go  otp.go  otp_test.go  parser.go  parser_test.go  reply.go  reply_test.go  runner.go  runner_test.go  sanitize.go  service.go  service_test.go  types.go
pkg/agw/: protocol.go  server.go
pkg/app/: adapters.go  app.go  beacon_is_sink_test.go  config.go  flags.go  igate_simulation_persist_test.go  kiss_gate.go  kiss_gate_test.go  resolve_tx_channel_test.go  rxfanout.go  rxfanout_test.go  wiring.go  wiring_blocklist_isolation_test.go
pkg/aprs/: message.go  mice.go  mice_test.go  parse.go  path.go  path_test.go  position.go  types.go
pkg/ax25/: frame_test.go
pkg/ax25conn/: CREDITS.md  defaults.go  defaults_test.go  doc.go  events.go  manager.go  manager_test.go  session.go  state.go  state_test.go  stats_tick_test.go  transitions_awaiting_connection_test.go
pkg/ax25termws/: bridge.go  bridge_test.go  envelope.go  raw_tail_format_test.go
pkg/beacon/: builder.go  encoder.go  encoder_test.go  mice.go  mice_test.go  object_timestamp_test.go  scheduler.go  scheduler_test.go  types.go
pkg/bulletins/: scheduler.go  scheduler_test.go  sender.go  service.go  service_test.go  store.go  store_test.go
pkg/clocksync/: clocksync_linux.go  clocksync_linux_test.go
pkg/configstore/: actions.go  actions_test.go  ax25_profiles.go  ax25_profiles_test.go  ax25_transcripts.go  ax25_transcripts_test.go  beacon_send_path_test.go  channel_mode_lookup.go  channel_mode_lookup_test.go  channel_referrers_test.go  iface.go  igate_simulation_test.go  messages_config.go  messages_config_test.go  migrate.go  migrate_actions.go  migrate_actions_argmode_test.go  migrate_actions_test.go  migrate_actions_uppercase.go  migrate_actions_uppercase_test.go  migrate_beacon_send_path.go  migrate_bulletin_interval.go  migrate_bulletin_row_interval.go  migrate_bulletins_table.go  migrate_channel_mode.go  migrate_channel_mode_test.go  models.go  (+19 more)
proto/: graywolf.proto
radar-contour/: Cargo.toml
radar-contour/src/: chaikin.rs  config.rs  contour.rs  lib.rs  main.rs  mercator.rs  mvt.rs  package.rs  publish.rs  smooth.rs  tile.rs  timeutil.rs
radar-contour/src/field/: mod.rs  mrms.rs  n0q.rs
radar-contour/src/field/level2/: decode.rs  grid.rs  mod.rs  sites.rs
radar-contour/tests/: level2_decode.rs  mrms_decode.rs
src/: filter_buf.rs  hdlc.rs  lib.rs
tests/: correctness.rs  ipc_flac_e2e.rs  loopback_README.md
web/: embed.go  index.html  package-lock.json  package.json  vite.config.js
(+639 files in other folders)
