[workspace]
members = ["graywolf-modem"]
resolver = "2"

# This workspace manifest declares the repo root as a cargo workspace whose
# sole member is the graywolf-modem crate. The reason it exists is to make
# cross-rs's Docker-based cross builds mount the whole repo root (so the
# shared proto/ schema and VERSION file are accessible from inside the
# container), not just the crate subdirectory.
#
# As a side effect, cargo places the shared build output at /target/ rather
# than graywolf-modem/target/ — several path references (Makefile, main.go,
# bridge.go, integration tests, release workflow) depend on this location.

# Fix for the t64 ALSA crash on 32-bit Raspberry Pi OS (issue #231). On a
# t64 system libasound writes a 16-byte struct timespec; stock alsa-rs reads
# it into an 8-byte libc::timespec and smashes the stack. This fork reads the
# htstamp accessors into a 16-byte buffer so the C call cannot overflow --
# without compiling for time64, so the armhf binary still links against the
# (pre-t64) cross toolchain and keeps running on older 32-bit systems too.
#
# This rev also fixes the inverse regression (issue #336): the buffer decode
# assumed the time64 layout unconditionally and returned garbage on pre-t64
# (time32) libasound, flooding cpal with "get_htstamp was earlier than
# get_trigger_htstamp" errors. The decode is now ABI-aware, so one time32
# binary is correct on both pre-t64 and t64 userlands.
# See docs/plans/2026-06-11-armhf-t64-alsa-htstamp-fix.md. Drop once the fix
# is released upstream.
[patch.crates-io]
alsa = { git = "https://github.com/chrissnell/alsa-rs", rev = "56099e8915af95f322d6eeca3a24da5d7c7098e4" }
