[package]
name = "radar-contour"
version = "0.1.0"
edition = "2021"
description = "Level II reflectivity -> smoothed vector isoband PMTiles generator"

[[bin]]
name = "radar-contour"
path = "src/main.rs"

[lib]
name = "radar_contour"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Level II (v1 field source)
nexrad-data = "1.0.0-rc.7"
nexrad-decode = "1.0.0-rc.3"
nexrad-model = "1.0.0-rc.2"
# Fallback field sources
gribberish = "1.0"
image = { version = "=0.25.5", default-features = false, features = ["png"] }
# Pipeline
contour-isobands = "0.4"
geo = "0.33"
geo-types = "0.7"
geozero = { version = "0.15", features = ["with-mvt", "with-geo"] }
rusqlite = { version = "0.32", features = ["bundled"] }
# IO -- R2/S3 via a tiny pure-Rust signer + reqwest (reqwest is already in the
# tree via nexrad-data). Avoids the heavyweight aws-sdk-s3 dependency cascade.
rusty-s3 = "0.9"
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
async-trait = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1"
time = { version = "0.3", features = ["parsing", "formatting"] }

[dev-dependencies]
approx = "0.5"
